Fix z-indexing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -214,7 +214,7 @@ textarea {
     left: 0;
     width: 100%;
     padding: var(--spacing-md) 0;
-    z-index: 20;
+    z-index: 200;
 }
 
 /* .nav.scrolled {
